fix: home svg fixed (#20)
* update(home): design updated

* fix(svg): svg lightened

* fix: white-space removed

* fix: unnecessary svg removed

* feat: gradient background added

* fix(community): font weight increased

* fix: wallet connect removed

* fix: nft-bundle script added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <meta
       property="og:description"
-      content="Fuzion NFTs will come in 5 stages: Originals, Chained, Evolution, Adventure, Nirvana!"
+      content="Fuzion NFTs will come in 5 stages evolving and challenging the current status quo by progressing NFT technology, creating greater utility, originality and entertainment!"
     />
     <meta property="og:type" content="website" />
     <meta
@@ -102,12 +102,11 @@
             <div id="prepare">
               <li class="nav-item">
                 <a
-                  class="nav-link primary-button mt-3"
+                  class="nav-link connected-button mt-3"
                   id="btn-connect"
                   onclick="connectAccount()"
                   type="button"
-                  >Connect wallet</a
-                >
+                  >Connect wallet</a>
               </li>
             </div>
             <div id="connected" style="display: none">
@@ -125,7 +124,7 @@
                     />
                     <div class="media-body pl-2">
                       Connected<br />
-                      <span class="bnbBalance">25.00 BNB</span>
+                      <span class="bnbBalance">---</span>
                     </div>
                     <!--                <span class="caret"></span>-->
                   </div>
@@ -148,16 +147,16 @@
     <section class="hero-section">
       <div class="custom-container">
         <div class="row">
-          <div class="col-md-6 my-auto">
+          <div class="col-md-6 mt-md-5 pt-md-5 mt-sm-0 pt-sm-0">
             <p class="section-subheading">Binance Smart Chain Based NFTs</p>
             <h1 class="section-heading">
               Fuzion NFTs:<br />
-              Creativity<br />
+              Creativity
               At Work
             </h1>
             <div class="d-flex mt-5">
               <div class="input-group explore-btn">
-                <a href="" class="form-control explore-btn-inner is-disabled"
+                <a href="#" class="form-control explore-btn-inner"
                   >Explore</a
                 >
                 <div class="input-group-prepend">
@@ -173,21 +172,23 @@
               <a
                 href=""
                 class="mint-btn is-disabled"
-                data-toggle="tooltip"
-                data-placement="bottom"
-                title="Minting Will Be Live Soon!"
                 >MINT YOUR NFT</a
               >
             </div>
+            <div class="minting-block">
+              <p class="my-2"><img src="./img/home/hero/minting-icon.svg" alt="minting icon" width="30px"><span class="pl-2 mt-4 minting-status">Minting Will Be Live Soon!</span></p>
+            </div>
           </div>
-          <div class="offset-md-6"></div>
+          <div class="col-md-6 d-flex justify-content-center">
+            <img src="./img/home/hero/masked-alien.svg" alt="masked alien" class="img-fluid masked-alien">
+          </div>
         </div>
       </div>
     </section>
     <!-- hero section ends here -->
 
     <!-- feature section starts here -->
-    <section class="feature-section">
+    <section class="feature-section position-relative">
       <div class="custom-container">
         <div class="row">
           <div class="col-lg-3 col-md-4">
@@ -242,8 +243,7 @@
                     </p>
                     <ul class="block-content-list">
                       <li>14% to NFT Holders</li>
-                      <li>
-                        10% to referrals (if no referral exists then will be
+                      <li>10% to referrals (if no referral exists then will be
                         split between 5 & 6)
                       </li>
                       <li>4% to PAZ holders</li>
@@ -300,6 +300,7 @@
         </div>
 
         <div class="row mt-5 pt-5 position-relative">
+          <img src="./img/home/feature/light.svg" alt="light" class="light-img">
           <div class="col-md-6 my-auto">
             <p class="section-subheading">Nirvana Gaming Universe</p>
             <h1 class="section-heading">Revolutionizing the NFT Universe</h1>
@@ -317,7 +318,7 @@
             <img
               src="./img/home/feature/female.svg"
               alt="Mecha img"
-              class="img-fluid mecha-img"
+              class="img-fluid female-img"
             />
           </div>
           <img
@@ -327,6 +328,7 @@
           />
         </div>
       </div>
+      <div class="cutoff-shade"></div>
     </section>
     <!-- feature section ends here -->
 
@@ -593,6 +595,7 @@
 
     <!-- selling steps section starts here -->
     <section class="selling-steps-section position-relative">
+      <img src="./img/home/selling/globe-stars.svg" alt="globe stars" class="globe-stars">
       <div class="custom-container">
         <div class="row">
           <div class="col-md-12">
@@ -605,7 +608,7 @@
         <div class="selling-steps-block mt-5">
           <div class="row">
             <div class="col-md-4">
-              <div class="step-card text-center">
+              <div class="step-card text-center card-border-right">
                 <img src="./img/home/selling/step-1.svg" alt="selling step 1" />
                 <h3 class="py-3">
                   Set up<br />
@@ -628,7 +631,7 @@
               </div>
             </div>
             <div class="col-md-4">
-              <div class="step-card text-center">
+              <div class="step-card text-center card-border-left">
                 <img src="./img/home/selling/step-3.svg" alt="selling step 3" />
                 <h3 class="py-3">
                   List them<br />
@@ -653,9 +656,6 @@
               <a
                 href=""
                 class="form-control explore-btn-inner is-disabled"
-                data-toggle="tooltip"
-                data-placement="bottom"
-                title="Minting Will Be Live Soon!"
                 >MINT YOUR NFT</a
               >
 
@@ -670,6 +670,11 @@
               </div>
             </div>
           </div>
+          <div class="col-md-12 d-flex justify-content-center">
+            <div class="minting-block">
+              <p class="my-2"><img src="./img/home/hero/minting-icon.svg" alt="minting icon" width="30px"><span class="pl-2 mt-4 minting-status">Minting Will Be Live Soon!</span></p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -680,23 +685,23 @@
       <div class="custom-container">
         <div class="join-community-block">
           <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-6">
               <h3 class="color-black">Join the community</h3>
-              <p class="color-black">
+              <p class="color-black pt-3">
                 The Fuzion Team prides itself in its relentless approach to
                 innovation. We take what exist and we supercharge it. Join our
                 ever growing community on discord and telegram and connect with
                 our team! We’d love to hear about your creative ideas!
               </p>
             </div>
-            <div class="col-md-4">
-              <div class="input-group mt-5 explore-btn">
+
+            <div class="col-md-6">
+              <div class="input-group mt-5 explore-btn pt-3">
                 <a
                   href="https://discord.com/invite/24uAPzKYFu"
                   target="_blank"
                   class="form-control explore-btn-inner"
-                  >EXPLORE</a
-                >
+                  >EXPLORE</a>
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img
@@ -734,7 +739,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-lg-6 col-md-4">
-            <p class="footer-txt">10,000 unique punks who need owners.</p>
+            <p class="footer-txt">10,000 unique punks who need homes.</p>
           </div>
           <div class="col-lg-6 col-md-8">
             <ul class="social-icons-list">
@@ -846,8 +851,5 @@
     ></script>
     <!-- custom js -->
     <script src="./nft.bundle.js"></script>
-    <script>
-      $('[data-toggle="tooltip"]').tooltip();
-    </script>
   </body>
 </html>
