fix: typo fixed

--- a/index.html
+++ b/index.html
@@ -489,14 +489,14 @@
                   </div>
                   <div class="step-body">
                     <p>
-                      Quality over quanity. Fuzion NFT stage 1 Originals will be
+                      Quality over quantity. Fuzion NFT stage 1 Originals will be
                       NFTs that will stand out from the rest. Our goal was to
                       handcraft original NFTs that are unique from all other
                       NFTs out there. These originals are created with great
                       thought, precision and intricacy. Fuzion Originals will
                       establish the gold standard with which we’ll move forward
                       in our NFT line-up. Fuzion token holders (Rice, TeslaSafe,
-                      and Paz) will have first access priviledges when it comes
+                      and Paz) will have first access privileges when it comes
                       to the minting phase of Fuzion Original NFTs.
                     </p>
                   </div>
@@ -689,7 +689,7 @@
               <h3 class="color-black">Join the community</h3>
               <p class="color-black pt-3">
                 The Fuzion Team prides itself in its relentless approach to
-                innovation. We take what exist and we supercharge it. Join our
+                innovation. We take what exists and we supercharge it. Join our
                 ever growing community on discord and telegram and connect with
                 our team! We’d love to hear about your creative ideas!
               </p>
