feat: profile page completed (#24)
* feat: profile page added

* feat: referral & rewards section added

* feat: profile portfolio added

* feat(profile): responsiveness completed

* feat: bnb balance fetched

* style: run format

* fix: connected btn fixed

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     <meta property="og:type" content="website" />
     <meta
       property="og:image"
-      content="https://nft.fuzion.team/img/header/nft-logo.png"
+      content="https://nft.fuzion.team/img/logos/nft-logo.png"
     />
     <meta property="og:url" content="https://nft.fuzion.team/" />
     <title>Fuzion NFTs</title>
     <link
       rel="icon"
-      href="./img/header/nft-logo.png"
+      href="./img/logos/nft-logo.png"
       type="image/gif"
       sizes="16x16"
     />
@@ -43,8 +43,8 @@
     <!-- Navbar starts here -->
     <nav class="navbar navbar-expand-lg fixed-top fixed-header">
       <div class="custom-container nav-row">
-        <a class="navbar-brand pt-2" href="#">
-          <img src="./img/header/nft-logo.svg" alt="NFT logo" />
+        <a class="navbar-brand pt-2" href="index.html">
+          <img src="./img/logos/nft-logo.svg" alt="NFT logo" />
         </a>
         <button
           class="navbar-toggler float-right mt-3"
@@ -106,7 +106,8 @@
                   id="btn-connect"
                   onclick="connectAccount()"
                   type="button"
-                  >Connect wallet</a>
+                  >Connect wallet</a
+                >
               </li>
             </div>
             <div id="connected" style="display: none">
@@ -118,20 +119,22 @@
                 >
                   <div class="media position-realtive">
                     <img
-                      src="./img/header/online-icon.svg"
+                      src="./img/header/user-box.svg"
                       alt="online icon"
-                      width="44px"
+                      class="online-icon"
                     />
                     <div class="media-body pl-2">
                       Connected<br />
-                      <span class="bnbBalance">---</span>
+                      <p class="color-white mb-0">
+                        <span class="bnbBalance"></span> BNB
+                      </p>
                     </div>
-                    <!--                <span class="caret"></span>-->
+                    <span><img src="./img/header/down-arrow.svg" alt="down arrow" class="dropdown-arrow"></span>
                   </div>
                 </a>
                 <ul class="dropdown-menu">
-                  <li class="pt-2"><a href="#">Profile</a></li>
-                  <li class="pt-2">
+                  <!--                  <li class="pt-2"><a href="profile.html">Profile</a></li>-->
+                  <li>
                     <a onclick="disconnect()">Disconnect Wallet</a>
                   </li>
                 </ul>
@@ -151,14 +154,11 @@
             <p class="section-subheading">Binance Smart Chain Based NFTs</p>
             <h1 class="section-heading">
               Fuzion NFTs:<br />
-              Creativity
-              At Work
+              Creativity At Work
             </h1>
             <div class="d-flex mt-5">
               <div class="input-group explore-btn">
-                <a href="#" class="form-control explore-btn-inner"
-                  >Explore</a
-                >
+                <a href="#" class="form-control explore-btn-inner">Explore</a>
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img
@@ -169,18 +169,26 @@
                   </div>
                 </div>
               </div>
-              <a
-                href=""
-                class="mint-btn is-disabled"
-                >MINT YOUR NFT</a
-              >
+              <a href="" class="mint-btn is-disabled">MINT YOUR NFT</a>
             </div>
             <div class="minting-block">
-              <p class="my-2"><img src="./img/home/hero/minting-icon.svg" alt="minting icon" width="30px"><span class="pl-2 mt-4 minting-status">Minting Will Be Live Soon!</span></p>
+              <p class="my-2">
+                <img
+                  src="./img/home/hero/minting-icon.svg"
+                  alt="minting icon"
+                  width="30px"
+                /><span class="pl-2 mt-4 minting-status"
+                  >Minting Will Be Live Soon!</span
+                >
+              </p>
             </div>
           </div>
           <div class="col-md-6 d-flex justify-content-center">
-            <img src="./img/home/hero/masked-alien.svg" alt="masked alien" class="img-fluid masked-alien">
+            <img
+              src="./img/home/hero/masked-alien.svg"
+              alt="masked alien"
+              class="img-fluid masked-alien"
+            />
           </div>
         </div>
       </div>
@@ -300,7 +308,11 @@
         </div>
 
         <div class="row mt-5 pt-5 position-relative">
-          <img src="./img/home/feature/light.svg" alt="light" class="light-img">
+          <img
+            src="./img/home/feature/light.svg"
+            alt="light"
+            class="light-img"
+          />
           <div class="col-md-6 my-auto">
             <p class="section-subheading">Nirvana Gaming Universe</p>
             <h1 class="section-heading">Revolutionizing the NFT Universe</h1>
@@ -489,8 +501,8 @@
                   </div>
                   <div class="step-body">
                     <p>
-                      Quality over quantity. Fuzion NFT stage 1 Originals will be
-                      NFTs that will stand out from the rest. Our goal was to
+                      Quality over quantity. Fuzion NFT stage 1 Originals will
+                      be NFTs that will stand out from the rest. Our goal was to
                       handcraft original NFTs that are unique from all other
                       NFTs out there. These originals are created with great
                       thought, precision and intricacy. Fuzion Originals will
@@ -595,7 +607,11 @@
 
     <!-- selling steps section starts here -->
     <section class="selling-steps-section position-relative">
-      <img src="./img/home/selling/globe-stars.svg" alt="globe stars" class="globe-stars">
+      <img
+        src="./img/home/selling/globe-stars.svg"
+        alt="globe stars"
+        class="globe-stars"
+      />
       <div class="custom-container">
         <div class="row">
           <div class="col-md-12">
@@ -653,9 +669,7 @@
         <div class="row">
           <div class="col-md-12 d-flex justify-content-center">
             <div class="input-group mt-5 explore-btn" style="width: 185px">
-              <a
-                href=""
-                class="form-control explore-btn-inner is-disabled"
+              <a href="" class="form-control explore-btn-inner is-disabled"
                 >MINT YOUR NFT</a
               >
 
@@ -672,7 +686,15 @@
           </div>
           <div class="col-md-12 d-flex justify-content-center">
             <div class="minting-block">
-              <p class="my-2"><img src="./img/home/hero/minting-icon.svg" alt="minting icon" width="30px"><span class="pl-2 mt-4 minting-status">Minting Will Be Live Soon!</span></p>
+              <p class="my-2">
+                <img
+                  src="./img/home/hero/minting-icon.svg"
+                  alt="minting icon"
+                  width="30px"
+                /><span class="pl-2 mt-4 minting-status"
+                  >Minting Will Be Live Soon!</span
+                >
+              </p>
             </div>
           </div>
         </div>
@@ -701,7 +723,8 @@
                   href="https://discord.com/invite/24uAPzKYFu"
                   target="_blank"
                   class="form-control explore-btn-inner"
-                  >EXPLORE</a>
+                  >EXPLORE</a
+                >
                 <div class="input-group-prepend">
                   <div class="input-group-text">
                     <img
@@ -724,7 +747,7 @@
       <div class="custom-container">
         <div class="row">
           <div class="col-lg-6 col-md-4 footer-logo">
-            <img src="./img/footer/nft-logo.svg" alt="NFT logo" />
+            <img src="./img/logos/nft-logo.svg" alt="NFT logo" />
           </div>
           <div class="col-lg-6 col-md-8">
             <ul class="pt-3 footer-links">
