feat: detail modal added (#26)
* feat: detail page added

* feat: detail modal added

* fix: detail page removed

* feat: presale status added

* style: run format

* fix: connect btn fixed

* fix: typo fixed

* fix(Originals): typo fixed

* fix: font-weight fixed

--- a/index.html
+++ b/index.html
@@ -95,22 +95,21 @@
               <a class="nav-link" href="#">Roadmap</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Marketplace</a>
+              <a class="nav-link is-disabled" href="#">Marketplace</a>
             </li>
           </ul>
           <ul class="ml-auto my-auto">
-            <div id="prepare">
+            <div id="prepare" style="display: none">
               <li class="nav-item">
                 <a
-                  class="nav-link connected-button mt-3"
+                  class="connect-btn-home mt-2"
                   id="btn-connect"
                   onclick="connectAccount()"
                   type="button"
-                  >Connect wallet</a
-                >
+                  >Connect wallet</a>
               </li>
             </div>
-            <div id="connected" style="display: none">
+            <div id="connected">
               <li class="nav-item dropdown">
                 <a
                   class="nav-link connected-btn dropdown-toggle"
@@ -129,7 +128,12 @@
                         <span class="bnbBalance"></span> BNB
                       </p>
                     </div>
-                    <span><img src="./img/header/down-arrow.svg" alt="down arrow" class="dropdown-arrow"></span>
+                    <span
+                      ><img
+                        src="./img/header/down-arrow.svg"
+                        alt="down arrow"
+                        class="dropdown-arrow"
+                    /></span>
                   </div>
                 </a>
                 <ul class="dropdown-menu">
@@ -174,7 +178,7 @@
             <div class="minting-block">
               <p class="my-2">
                 <img
-                  src="./img/home/hero/minting-icon.svg"
+                  src="./img/icons/minting-icon.svg"
                   alt="minting icon"
                   width="30px"
                 /><span class="pl-2 mt-4 minting-status"
@@ -232,7 +236,7 @@
                     class="feature-block-icon d-flex justify-content-center h-100"
                   >
                     <img
-                      src="./img/home/feature/minting-icon.svg"
+                      src="./img/home/feature/minting.svg"
                       alt="Minting icon"
                       class="my-auto"
                       height="80px"
@@ -437,7 +441,7 @@
                 role="tab"
                 aria-controls="v-pills-home"
                 aria-selected="true"
-                ><span class="pr-2">01</span> ORIGNALS</a
+                ><span class="pr-2">01</span> Originals</a
               >
               <a
                 class="nav-link mt-4"
@@ -497,7 +501,7 @@
                 <div class="roadmap-step-block">
                   <div class="roadmap-step-header">
                     <p class="section-subheading mb-0">Stage 01</p>
-                    <h1 class="step-heading">ORIGNALS</h1>
+                    <h1 class="step-heading">Originals</h1>
                   </div>
                   <div class="step-body">
                     <p>
@@ -688,7 +692,7 @@
             <div class="minting-block">
               <p class="my-2">
                 <img
-                  src="./img/home/hero/minting-icon.svg"
+                  src="./img/icons/minting-icon.svg"
                   alt="minting icon"
                   width="30px"
                 /><span class="pl-2 mt-4 minting-status"
@@ -769,7 +773,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./img/social/mail-icon.svg"
+                    src="./img/icons/mail-circle-icon.svg"
                     alt="mail icon"
                     class="social-icon"
                     width="45px"
@@ -779,7 +783,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./img/social/facebook-icon.svg"
+                    src="./img/icons/facebook-circle-icon.svg"
                     alt="facebook icon"
                     class="social-icon"
                     width="45px"
@@ -789,7 +793,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./img/social/twitter-icon.svg"
+                    src="./img/icons/twitter-circle-icon.svg"
                     alt="twitter icon"
                     class="social-icon"
                     width="45px"
@@ -799,7 +803,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./img/social/telegram-icon.svg"
+                    src="./img/icons/telegram-circle-icon.svg"
                     alt="telegram icon"
                     class="social-icon"
                     width="45px"
@@ -809,7 +813,7 @@
               <li class="pr-2">
                 <a href="">
                   <img
-                    src="./img/social/ticktok-icon.svg"
+                    src="./img/icons/ticktok-circle-icon.svg"
                     alt="ticktok icon"
                     class="social-icon"
                     width="45px"
