--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,8 @@
                   id="btn-connect"
                   onclick="connectAccount()"
                   type="button"
-                  >Connect wallet</a>
+                  >Connect wallet</a
+                >
               </li>
             </div>
             <div id="connected" style="display: none">
@@ -160,7 +161,9 @@
               alt="profile-dp"
               width="100px"
             />
-            <p class="profile-address mt-3"><span class="shortAddress">0xa3Aab1bDF6C86...</span></p>
+            <p class="profile-address mt-3">
+              <span class="shortAddress">0xa3Aab1bDF6C86...</span>
+            </p>
             <p class="punks-numbers">0 Total Fuzion Punks</p>
             <div class="presale-status">
               <div class="media p-2">
@@ -451,7 +454,7 @@
                       </div>
                     </div>
 
-                    <!--detail Modal -->
+                    <!--detail Modal starts here-->
                     <div
                       class="modal fade mt-3"
                       id="exampleModalCenter"
@@ -628,6 +631,7 @@
                         </div>
                       </div>
                     </div>
+                    <!--detail modal ends here-->
                   </div>
                 </div>
                 <!--reward tab content-->
