--- a/index.html
+++ b/index.html
@@ -229,11 +229,7 @@
                   want to mint?
                 </p>
                 <div class="position-relative">
-                  <input
-                    type="number"
-                    placeholder="1"
-                    class="minting-input"
-                  />
+                  <input type="number" placeholder="1" class="minting-input" />
                   <a onclick="maxMintPunks()" class="max-mint-btn">MAX</a>
                 </div>
                 <button class="start-minting-btn">START MINTING</button>
@@ -314,46 +310,103 @@
                 </div>
               </div>
             </div>
-            <!--            <div class="feature-block mt-3">-->
-            <!--              <div class="row no-gutters h-100">-->
-            <!--                <div class="col-md-2">-->
-            <!--                  <div-->
-            <!--                    class="feature-block-icon d-flex justify-content-center h-100"-->
-            <!--                  >-->
-            <!--                    <img-->
-            <!--                      src="./img/home/feature/royalties-icon.svg"-->
-            <!--                      alt="Royalties icon"-->
-            <!--                      class="my-auto"-->
-            <!--                      height="80px"-->
-            <!--                      width="80px"-->
-            <!--                    />-->
-            <!--                  </div>-->
-            <!--                </div>-->
-            <!--                <div class="col-md-10">-->
-            <!--                  <div class="feature-block-content">-->
-            <!--                    <h4 class="block-content-heading">Royalties</h4>-->
-            <!--                    <p>-->
-            <!--                      <span class="block-content-strip"-->
-            <!--                        >Royalties: Fees from the Fuzion NFT Marketplace.</span-->
-            <!--                      >-->
-            <!--                    </p>-->
-            <!--                    <p>-->
-            <!--                      <span class="block-content-strip"-->
-            <!--                        >The Listing and Delisting Fee is to prevent users from-->
-            <!--                        spamming the marketplace.</span-->
-            <!--                      >-->
-            <!--                    </p>-->
-            <!--                    <ul class="block-content-list">-->
-            <!--                      <li>7% reflections to all NFT Holders</li>-->
-            <!--                      <li>7% royalties to the original minter</li>-->
-            <!--                      <li>0.05 BNB Listing Fee reflected to all NFT Holders</li>-->
-            <!--                      <li>0.05 BNB Delisting Fee reflected to all NFT Holders-->
-            <!--                      </li>-->
-            <!--                    </ul>-->
-            <!--                  </div>-->
-            <!--                </div>-->
-            <!--              </div>-->
-            <!--            </div>-->
+            <div class="feature-block mt-3">
+              <div class="row no-gutters h-100">
+                <div class="col-md-2">
+                  <div
+                    class="feature-block-icon d-flex justify-content-center h-100"
+                  >
+                    <img
+                      src="./img/home/feature/royalties-icon.svg"
+                      alt="Royalties icon"
+                      class="my-auto"
+                      height="80px"
+                      width="80px"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-10">
+                  <div class="feature-block-content">
+                    <h4 class="block-content-heading">The OG Holders Club</h4>
+                    <p class="mb-0">
+                      <span class="block-content-strip"
+                        >OG (Original Gangsters): Anyone holding a Fuzion
+                        Original Series NFT</span
+                      >
+                    </p>
+                    <p>
+                      <span class="block-content-strip"
+                        >Access granted to member only benefits.
+                      </span>
+                    </p>
+                    <ul class="block-content-list">
+                      <li>Redeem free NFT in any upcoming Fuzion series!</li>
+                      <li>Automatic whitelisting Into future presales.</li>
+                      <li>
+                        In the future there will can be tax free benefits as
+                        well.
+                      </li>
+                      <li>
+                        The ability to upgrade and equip Original NFT’s using on
+                        chain NFTs.
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="feature-block mt-3">
+              <div class="row no-gutters h-100">
+                <div class="col-md-2">
+                  <div
+                    class="feature-block-icon d-flex justify-content-center h-100"
+                  >
+                    <img
+                      src="./img/home/feature/dividends-icon.svg"
+                      alt="Royalties icon"
+                      class="my-auto"
+                      height="80px"
+                      width="80px"
+                    />
+                  </div>
+                </div>
+                <div class="col-md-10">
+                  <div class="feature-block-content">
+                    <h4 class="block-content-heading">
+                      Innovations and Improvements
+                    </h4>
+                    <p>
+                      <span class="block-content-strip"
+                        >CryptoPunks (2017) is one of the first NFTs and helped
+                        inspire the ERC-721 standard.</span
+                      >
+                    </p>
+                    <ul class="block-content-list">
+                      <li>
+                        Upgraded from pixel art to hand drawn original anime
+                        art.
+                      </li>
+                      <li>Each attribute was custom made for each base.</li>
+                      <li>
+                        Crafted a unique look and feel for each base type.
+                      </li>
+                      <li>
+                        Created 50+ extra attributes using existing attributes
+                        that weren’t utilized on certain character types adding
+                        millions of new combinations.
+                      </li>
+                      <li>
+                        Example: Hoodie Attribute. Original CryptoPunks only
+                        gave this attribute to male and zombies. We’ve expanded
+                        it to include all of the other types of characters as
+                        well. The female hoodie was also updated to give her a
+                        little red riding hood look.
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="offset-lg-2"></div>
         </div>
