fix(club): tax free grammar fix

--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                       <li>Redeem free NFT in any upcoming Fuzion series!</li>
                       <li>Automatic whitelisting Into future presales.</li>
                       <li>
-                        In the future there will can be tax free benefits as
+                        In the future there can be tax free benefits as
                         well.
                       </li>
                       <li>
