feat: transaction modals & getCookie done (#33)
* feat: transaction modals & getCookie done

* fix: modal.js edited

* fix: modals.js code cleaned-up

* fix: getReferral call removed

* style: run format

--- a/index.html
+++ b/index.html
@@ -343,8 +343,7 @@
                       <li>Redeem free NFT in any upcoming Fuzion series!</li>
                       <li>Automatic whitelisting Into future presales.</li>
                       <li>
-                        In the future there can be tax free benefits as
-                        well.
+                        In the future there can be tax free benefits as well.
                       </li>
                       <li>
                         The ability to upgrade and equip Original NFT’s using on
