--- a/profile.html
+++ b/profile.html
@@ -727,6 +727,126 @@
     </section>
     <!--profile section ends here-->
 
+    <!-- metamask confirmation modal starts here -->
+    <div
+      class="modal"
+      tabindex="-1"
+      role="dialog"
+      id="confirmationModal"
+      style="display: none"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content transaction-content">
+          <div class="modal-body text-center">
+            <img
+              src="./img/icons/Spinner-icon.svg"
+              alt="spinner"
+              width="140px"
+            />
+            <p class="text-center">
+              Waiting for confirmation<br />
+              from your wallet
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- metamask confirmation modal ends here -->
+
+    <!-- transaction submited modal starts here -->
+    <div
+      class="modal"
+      tabindex="-1"
+      role="dialog"
+      id="processingModal"
+      style="display: none"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content transaction-content">
+          <div class="modal-body text-center">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="107"
+              height="97.124"
+              viewBox="0 0 107 97.124"
+            >
+              <g
+                id="Group_1"
+                data-name="Group 1"
+                transform="translate(0 -0.001)"
+              >
+                <path
+                  id="cloud"
+                  class="cloud"
+                  stroke="white"
+                  data-name="Fill 1"
+                  d="M83.361,72H23.639A23.529,23.529,0,0,1,16.1,26.146,27.727,27.727,0,0,1,18.562,16.3a28.361,28.361,0,0,1,5.78-8.347A26.9,26.9,0,0,1,43.547,0h.005a26.8,26.8,0,0,1,14,3.825,27.838,27.838,0,0,1,9.36,9.325,19.147,19.147,0,0,1,6.415-1.107,18.4,18.4,0,0,1,9.448,2.582c5.192,3.112,8.494,8.824,9.059,15.673a19.354,19.354,0,0,1,6.224,2.974,20.922,20.922,0,0,1,4.784,4.808A22.165,22.165,0,0,1,107,50.9a20,20,0,0,1-6.667,14.938A25.033,25.033,0,0,1,83.361,72ZM43.551,5a22.2,22.2,0,0,0-15.884,6.632,23.072,23.072,0,0,0-6.734,16.308,2.471,2.471,0,0,1-1.866,2.441A18.588,18.588,0,0,0,23.654,67H83.346C94.329,67,102,60.371,102,50.88c0-7.854-5.65-14.952-12.864-16.159a2.477,2.477,0,0,1-2.059-2.441c0-5.995-2.443-10.756-6.879-13.407a13.766,13.766,0,0,0-13.135-.5,2.493,2.493,0,0,1-1.108.26,2.487,2.487,0,0,1-2.234-1.384A22.368,22.368,0,0,0,43.552,5Z"
+                  fill="#ff000000"
+                />
+                <path
+                  id="arrow"
+                  class="arrow"
+                  data-name="Fill 1"
+                  d="M0,18.27l3.719,3.719L15.657,10.051V63.125h5.25V10.051L32.845,21.989l3.719-3.719L18.283,0Z"
+                  transform="translate(34 34)"
+                  stroke="white"
+                  fill="#ff000000"
+                />
+              </g>
+            </svg>
+            <p class="text-center pt-3 mb-5">Transaction submitted</p>
+            <a id="processing-transaction" target="_blank" class="explorer-btn"
+              >Go to Explorer
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- transaction submited modal ends here -->
+
+    <!-- Transaction confirmed modal starts here -->
+    <div
+      class="modal"
+      tabindex="-1"
+      role="dialog"
+      id="transactionModal"
+      style="display: none"
+    >
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content transaction-content">
+          <button
+            type="button"
+            class="close"
+            id="closeTransactionModal"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <div class="modal-body text-center">
+            <svg
+              id="checkmark-svg"
+              class="run-animation circle-svg"
+              data-name="Layer 1"
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 193.3 193.3"
+            >
+              <circle class="cls-1 circle" cx="96.65" cy="96.65" r="94.15" />
+              <polyline
+                class="cls-1 checkmark"
+                points="46.9 101.4 76.9 131.4 146.4 61.9"
+              />
+            </svg>
+            <p class="text-center pt-4 pb-3">Transaction completed</p>
+            <a id="transaction-link" target="_blank" class="explorer-btn"
+              >Go to Explorer
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Transaction confirmed modal ends here -->
+
     <!-- footer section starts here -->
     <section class="footer-section">
       <div class="custom-container">
